--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -16,10 +16,22 @@ spec:
         - name: auth
           image: iamrahulrnair/auth
           env:
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-srv:27017/auth'
-            - name: CHECK_ADMINS
-              value: 'ia mrah ulrn air'
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
+            - name: NATS_CLUSTER_ID
+              value: ticketing
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+
 ---
 apiVersion: v1
 kind: Service
