--- a/infra/k8s/review-depl.yaml
+++ b/infra/k8s/review-depl.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,8 +15,23 @@ spec:
       containers:
         - name: review
           image: iamrahulrnair/review
+          env:
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
             - name: MONGO_URI
-              value: 'mongodb://review-mongo-srv:27017/reviews'
+              value: 'mongodb://review-mongo-srv:27017/review'
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
+            - name: NATS_CLUSTER_ID
+              value: ticketing
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+
 ---
 apiVersion: v1
 kind: Service
