--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
     - host: speakup.dev
@@ -43,6 +43,13 @@ spec:
             backend:
               service:
                 name: auth-srv
+                port:
+                  number: 3000
+          - path: /api/request_a_post/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: post-queue-srv
                 port:
                   number: 3000
           - path: /?(.*)
