--- a/post_queue/package.json
+++ b/post_queue/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@suup/common": "^1.0.9",
+    "@suup/commonv2": "^1.0.6",
     "@types/cookie-session": "^2.0.43",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
